# oil-optimization

./: .gitignore  README.md  bce.crt  config.yml  pyproject.toml  response.json
config/: api_config.yml  config.yml
data/: oilPrice.csv
notebooks/: 01_data_extraction.ipynb  02_transform.ipynb  03_eda.ipynb  04_model_experiments.ipynb  data_collection.ipynb  eda.ipynb  model_development.ipynb
src/oil_optimization/: __init__.py
src/oil_optimization/components/: data_ingestion.py
src/oil_optimization/constants/: __init__.py
src/oil_optimization/data_extractor/: eia_extractor.py  extractor.py
src/oil_optimization/data_pipeline/: extractor.py  preprocessor.py
src/oil_optimization/utils/: io_helpers.py
tests/: test_eia_extractor.py
