[project]
name = "oil-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "SalazarV4",email = "diegosalazar.v4@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

