[project]
name = "oil-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "SalazarV4",email = "diegosalazar.v4@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "great-expectations (>=1.9.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (==1.6.1)",
    "pytest (>=9.0.0,<10.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "mlflow (<3)",
    "dagshub (>=0.6.3,<0.7.0)",
    "sktime (>=0.40.0,<0.41.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pmdarima (>=2.1.1,<3.0.0)"


]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

